--- a/frontend/src/styles/components/_button.scss
+++ b/frontend/src/styles/components/_button.scss
@@ -2,6 +2,8 @@ button {
 	border: none;
 	background-color: $color-grey-white;
 	outline: none;
+	cursor: pointer;
+	pointer-events: auto;
 }
 
 .btn {
@@ -13,7 +15,6 @@ button {
 	background-color: $color-primary;
 	border-radius: 5rem;
 	// width: 15rem;
-	cursor: pointer;
 
 	border: none;
 	color: $color-white;
