--- a/frontend/src/styles/components/_logo.scss
+++ b/frontend/src/styles/components/_logo.scss
@@ -30,7 +30,9 @@
 		animation: 1.4s leftToRight;
 	}
 
+	// Margin right to move search bar a bit closer with the nav__links margin-left set to auto
 	&__navbar {
+		margin-right: 18rem;
 		text-decoration: none;
 	}
 
