--- a/frontend/src/styles/components/_navigation.scss
+++ b/frontend/src/styles/components/_navigation.scss
@@ -1,5 +1,10 @@
 .navbar {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	height: 11.3rem;
+
+	margin-bottom: 8rem;
 
 	background-color: rgba($color: $color-black, $alpha: 0.8);
 
@@ -7,12 +12,14 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		width: 144rem;
 	}
 
 	&__links {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		margin-left: auto;
 
 		&--link {
 			text-decoration: none;
